# yarqa

./: .dockerignore  .gitignore  .gitleaks.toml  CITATIONS.md  PROVENANCE.md  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql.yml  dco.yml  gitleaks.yml  hf-deploy.yml  hf-sync.yml  pin-check.yml  pr-title.yml  receipt-sign.yml  sbom.yml  scorecard.yml  space-ci.yml  trivy.yml
examples/: synthetic_channel.py
scripts/: sign_receipt.py  verify_receipt.py
space/: Dockerfile  README.md  app.py  feeds.py  requirements.txt
space/static/: index.html  style.css
space/static/js/: app.js
space/static/lib/: THREE_LICENSE.txt
space/tests/: qa_headless.mjs  test_space_endpoints.py
tests/: test_agentic.py  test_attestation.py  test_chain.py  test_cli.py  test_core.py  test_meshio.py  test_prediction_receipt.py  test_provenance.py  test_routing_topk.py  test_signing.py  test_surrogate.py
yarqa/: __init__.py  agentic.py  attestation.py  chain.py  cli.py  core.py  meshio.py  provenance.py  signing.py  surrogate.py
